# middle-python-project-52

./: .gitignore  Makefile  README.md  build.sh  conftest.py  manage.py  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  code-quality-check.yml  hexlet-check.yml  sonarcloud.yml  unit-testing.yml
docs/: commands.md  features.md  i18n.md  quickstart.md  structure.md  tech-stack.md  testing.md
task_manager/: constants.py  settings.py  urls.py
task_manager/applications/index/: apps.py  tests.py  views.py
task_manager/applications/labels/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/applications/labels/migrations/: 0001_initial.py  0002_alter_label_created_at_alter_label_id_and_more.py  0003_alter_label_options_alter_label_table.py  0004_alter_label_options_alter_label_created_at.py  0005_alter_label_options_alter_label_created_at_and_more.py
task_manager/applications/labels/tests/: test_labels_forms.py
task_manager/applications/statuses/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/applications/statuses/migrations/: 0001_initial.py  0002_alter_status_created_at_alter_status_id_and_more.py  0003_alter_status_options_alter_status_table.py  0004_alter_status_options_alter_status_created_at.py  0005_alter_status_options_alter_status_created_at_and_more.py
task_manager/applications/statuses/tests/: test_statuses_forms.py
task_manager/applications/tasks/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/applications/tasks/migrations/: 0001_initial.py  0002_remove_task_user_task_author_task_executor_and_more.py  0003_alter_task_options_alter_task_table.py  0004_alter_task_name.py  0005_alter_task_options_alter_task_created_at.py  0006_alter_task_options_alter_task_author_and_more.py  0007_alter_task_labels.py
task_manager/applications/tasks/tests/: conftest.py  test_create.py  test_delete.py  test_detail.py  test_list.py  test_tasks_forms.py  test_update.py
task_manager/applications/tasks/views/: __init__.py  create.py  delete.py  list.py  update.py
task_manager/applications/users/: apps.py  forms.py  urls.py  views.py
task_manager/applications/users/tests/: __init__.py  test_create.py  test_delete.py  test_forms.py  test_list.py  test_update.py
task_manager/locale/en/LC_MESSAGES/: django.po
task_manager/locale/en_US/LC_MESSAGES/: django.po
task_manager/locale/ru/LC_MESSAGES/: django.po
task_manager/locale/ru_RU/LC_MESSAGES/: django.po
task_manager/templates/: index.html  login.html
task_manager/templates/common/: common_template.html  footer.html  head.html  header.html  list_template.html
task_manager/templates/labels/: create.html  delete.html  list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  list.html  update.html
task_manager/templates/users/: create.html  delete.html  list.html  update.html
task_manager/utilities/: aggregates.py  annotations.py  views_mixins.py
task_manager/utilities/tests/: test_aggregates.py  test_annotations.py  test_views_mixins.py
