[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "dj-database-url>=3.1.2",
    "django==5.2.14",
    "django-bootstrap-icons>=0.9.0",
    "django-bootstrap5>=26.2",
    "django-filter>=25.2",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "django-stubs>=6.0.4",
    "djlint>=1.36.4",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-django>=4.8.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.8",
    "types-django-filter>=25.2.0.20260508",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
lint.select = [
    "PLR", # refactoring
    "PLW", # warning
    "UP", # pyupgrade
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "UP", # pyupgrade
    "YTT", # flake8-2020
    "ASYNC", # async
    "E501",   # line too long
    "B012",   # bugbear: break inside finally
    "B024",   # bugbear: abstract method without abstract base class
    "C901",   # too complex
    "F401",   # imported but unused
    "F403",   # star import
    "F405",   # star import may be undefined
    "E402",   # module level import not at top
    "PLR0913",# too many arguments
    "I001",   # isort: import sort order
]
extend-exclude = ["**/migrations/"]
target-version = "py314"

[tool.pytest.ini_options]
django_settings = "task_manager.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--ds=task_manager.settings",
    "-n=auto",
]
