[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "coverage>=7.14.1",
    "dj-database-url>=3.1.2",
    "django==5.2.14",
    "django-bootstrap-icons>=0.9.0",
    "django-bootstrap5>=26.2",
    "django-filter>=25.2",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "django-stubs>=6.0.4",
    "djlint>=1.36.4",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-django>=4.8.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.8",
    "types-django-filter>=25.2.0.20260508",
]

[tool.black]
line-length = 120
extend-exclude = "/(migrations|__pycache__)/"
target-version = "py314"

[tool.ruff]
line-length = 120
lint.select = [
    "PLR",   # pylint refactoring
    "PLW",   # pylint warning
    "UP",    # pyupgrade
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "B",     # flake8-bugbear
    "C",     # flake8-comprehensions
    "YTT",   # flake8-2020
    "DJ",    # flake8-django — Django-specific checks
    "RUF",   # Ruff-specific rules
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "TCH",   # flake8-type-checking
    "PERF",  # Perflint
    "PTH",   # flake8-use-pathlib
    "DTZ",   # flake8-datetimez
    "EM",    # flake8-errmsg
]
extend-exclude = ["**/migrations/"]
target-version = "py314"

lint.ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF022",
]


[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true
exclude = [
    "migrations",
    "__pycache__",
]

[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--ds=task_manager.settings",
    "-n=auto",
]
